2003-11-07  J"orn Rennecke <joern.rennecke@superh.com>

	* sh-protos.h (sh_pch_valid_p): Declare.
	* sh.c ("intl.h"): Include.
	(TARGET_PCH_VALID_P): Override.
	(sh_target_switches): New variable.
	(target_switches): Define.
	(sh_pch_valid_p): New function.

	* sh.h (MODE_AFTER): Don't change mode unless TARGET_HITACHI.

2003-11-07  Jan Hubicka  <jh@suse.cz>

	* i386.c (x86_64_sign_extended_value):  Return false from tls variables.
	(x86_64_zero_extended_value):  likewise.

2003-11-07  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.md (loadgp): Take $25 as a second operand.
	* config/mips/mips.c (mips_expand_prologue): Modify accordingly.

2003-11-06  Matt Austern <austern@apple.com>

	* c-common.c (handle_visibility_attribute): Set DECL_VISIBILITY
	field instead of hanging an attribute object off the decl.
	* tree.h (DECL_VISIBLITY): New accessor macro for
	symbol_visibility field in struct tree_decl.
	(enum symbol_visibility): Move definition to before tree_decl.
	(struct tree_decl): Define new two-bit field, symbol_visibility.
	(decl_visibility): Remove declaration.
	* varasm.c (maybe_assemble_visibility): Use DECL_VISIBILITY
	instead of decl_visibility.
	(default_binds_local_p_1):  Use DECL_VISIBILITY	instead of 
	decl_visibility.
	(decl_visibility): Remove.
	
2003-11-06  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_emit_epilogue): Recognize more cases
	where register 14 will be saved.

2003-11-06  Geoffrey Keating  <geoffk@apple.com>

	* config/rs6000/rs6000.h (USE_FP_FOR_ARG_P): Move to rs6000.c.
	(USE_ALTIVEC_FOR_ARG_P): Likewise.
	* config/rs6000/rs6000.c (USE_FP_FOR_ARG_P): Move from rs6000.h.
	Take a pointer as the CUM parameter.  Update callers.
	(USE_ALTIVEC_FOR_ARG_P): Likewise.  Also correct for Darwin/AIX
	32-bit ABIs.
	(function_arg_advance): Use USE_ALTIVEC_FOR_ARG_P.  Correct case
	of vector parameters as named arguments of stdarg function.
	(function_arg): Likewise.
